--- a/amazon.ipynb
+++ b/amazon.ipynb
@@ -18,6 +18,31 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1529f66e-4954-4371-a65b-24a88fcd9e03",
+   "metadata": {},
+   "source": [
+    "| Column Name      | Description                                                                 |\n",
+    "| ---------------- | --------------------------------------------------------------------------- |\n",
+    "| Order\\_ID        | Unique identifier for each delivery order                                   |\n",
+    "| Agent\\_Age       | Age of the delivery agent (in years)                                        |\n",
+    "| Agent\\_Rating    | Customer-given rating of the delivery agent (scale 1-5)                     |\n",
+    "| Store\\_Latitude  | Latitude coordinate of the store location                                   |\n",
+    "| Store\\_Longitude | Longitude coordinate of the store location                                  |\n",
+    "| Drop\\_Latitude   | Latitude coordinate of the delivery/drop location                           |\n",
+    "| Drop\\_Longitude  | Longitude coordinate of the delivery/drop location                          |\n",
+    "| Order\\_Date      | Date when the order was placed                                              |\n",
+    "| Order\\_Time      | Time when the order was placed                                              |\n",
+    "| Pickup\\_Time     | Time when the order was picked up by the agent                              |\n",
+    "| Weather          | Weather condition during the delivery                                       |\n",
+    "| Traffic          | Traffic condition during the delivery                                       |\n",
+    "| Vehicle          | Type of vehicle used for the delivery                                       |\n",
+    "| Area             | Type of area where delivery is made (Urban, Metropolitan, Semi-Urban, etc.) |\n",
+    "| Delivery\\_Time   | Total time taken to deliver the order (in minutes)                          |\n",
+    "| Category         | Product category of the order                                               |\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "1abf4614-0990-411c-ac72-459b0f594cbe",
